2008-12-28  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gnl/gnlcomposition.c: (refine_start_stop_in_region_above_priority):
	Refine means "do not EXTEND the region" !
	This should fix more issues with complex timelines.

2008-12-14  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gnl/gnlsource.c: (gnl_source_send_event):
	Don't forget to call the parent_class send_event handler.

2008-12-13  Edward Hervey  <bilboed@gmail.com>

	* m4/Makefile.am: 
	Two more .m4 that aren't shipped anymore with gettext >= 0.17.

2008-12-13  Edward Hervey  <edward.hervey@collabora.co.uk>

	* m4/Makefile.am:
	inttypes.m4 hasn't been available since gettext-0.15, and since we now
	require gettext >= 0.17 ... we can remove it from the list of files to
	dist.

2008-12-04  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	Apparently AC_CONFIG_MACRO_DIR breaks when using more
	than one macro directory, reverting last change.

2008-12-04  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	Set AC_CONFIG_MACRO_DIR to common/m4 to point autoconf to
	our M4 macros.

2008-11-29  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Cygwin Ports maintainer
	          <yselkowitz at users dot sourceforge dot net>

	* autogen.sh:
	* configure.ac:
	Require gettext 0.17 because older versions don't mix with libtool
	2.2. At build time an older gettext version will still work.
	Fixes bug #556091.

2008-11-04  Stefan Kost  <ensonic@users.sf.net>

	* gnl/Makefile.am:
	  Don't install static libs for plugins. Fixes #550851 for -gnonlin.

2008-11-05  Edward Hervey  <bilboed@gmail.com>

	* configure.ac:
	And back to development...

=== release 0.10.10 ===

2008-11-03   Edward Hervey <edward.hervey@collabora.co.uk>

	* NEWS:
    * RELEASE:
	* configure.ac:
	  releasing 0.10.10, "All Good Things..."

2008-11-03  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gnl/gnlobject.c: (control_internal_pad):